--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@ index.html
   <title></title>
  </head>
  <body>
-  <div id="like_button_container"></div>
+  <h2>Add React in One Minute</h2>
+    <p>This page demonstrates using React with no build tooling.</p>
+    <p>React is loaded as a script tag.</p>
     <!-- ... other HTML ... -->
-
+    <div id="like_button_container">fgfgf</div>
   <!-- Load React. -->
   <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
   <!-- Load our React component. -->
-  <script src="launcher.js"></script>
+  <script src="like_button.js"></script>
  </body>
 </html>
